# Trading-System

./: .gitignore  DataTypes.hs  Trading-System.cabal  Utils.hs  test-speed.hs
Algos/: BRH.hs  LVRH.hs
Historical-Data/: acquire.hs
Lib/: DataTypes.hs  Hammer.hs  Levels.hs  LevelsAccel.hs  Utils.hs
ML/: train.hs
Trade-Engines/: backward-engine.hs  live-engine.hs
