cabal-version:       >=1.10
name:                Trading-System
version:             0.1.0.0
build-type:          Simple


library
  exposed-modules:
    Utils,
    DataTypes
  build-depends:       
    base >=4.14 && <=4.17.2.1, 
    containers >=0.6 && <0.7,
    aeson,
    text,
    time
  default-language:     Haskell2010
  hs-source-dirs:      Lib



executable live-engine
  main-is:             Trade-Engines/live-engine.hs
  build-depends:       
    base >=4.14 && <=4.17.2.1,
    Trading-System,
    hmatrix,
    websockets,
    network,
    wuss,
    aeson,
    aeson-pretty,
    bytestring,
    text,
    time
  default-language:     Haskell2010
  hs-source-dirs: 
    ., 
    Algos/
  other-modules: 
    LVRH,
    BRH

executable backward-engine
  main-is:             Trade-Engines/backward-engine.hs
  build-depends:       base >=4.14 && <=4.17.2.1
  default-language:     Haskell2010
  hs-source-dirs:      .

executable train
  main-is:             ML/train.hs
  build-depends:       base >=4.14 && <=4.17.2.1
  default-language:     Haskell2010
  hs-source-dirs:      .

executable acquire
  main-is:             Historical-Data/acquire.hs
  build-depends:      base >=4.14 && <=4.17.2.1 
  default-language:     Haskell2010
  hs-source-dirs:      .
