cabal-version:       >=1.10
name:                Trading-System
version:             0.1.0.0
build-type:          Simple


library
  exposed-modules:
    Lib.DataTypes,
    Lib.Utils,
    Lib.Levels,
    Lib.LevelsAccel,
    Algos.LVRH,
    Algos.BRH
  other-modules:
    
  build-depends:
    base >=4.14 && <4.15,
    containers,
    aeson,
    text,
    time,
    list,
    bytestring,
    hmatrix,
    accelerate,
    accelerate-llvm-ptx
  default-language: Haskell2010
  hs-source-dirs: .


executable live-engine
  main-is:             Trade-Engines/live-engine.hs
  build-depends: 
    Trading-System,      
    base >=4.14 && <4.15,
    hmatrix,
    websockets,
    network,
    wuss,
    aeson,
    bytestring,
    text,
    time,
    list,
    containers,
    accelerate,
    accelerate-llvm-ptx
  default-language:     Haskell2010
  hs-source-dirs: .

executable test-speed
  main-is: test-speed.hs 
  build-depends:
    Trading-System,
    base >=4.14 && <4.15,
    hmatrix,
    accelerate,
    accelerate-llvm-ptx,
    time,
    deepseq
  default-language:     Haskell2010
  hs-source-dirs: .
  ghc-options:         -threaded
executable backward-engine
  main-is:             Trade-Engines/backward-engine.hs
  build-depends:       
    base >=4.14 && <4.15,
    hmatrix
  default-language:     Haskell2010
  hs-source-dirs:      .

executable train
  main-is:             ML/train.hs
  build-depends:       base >=4.14 && <4.15
  default-language:     Haskell2010
  hs-source-dirs:      .

executable acquire
  main-is:             Historical-Data/acquire.hs
  build-depends:      base >=4.14 && <4.15 
  default-language:     Haskell2010
  hs-source-dirs:      .
